# utils/validation.js
@@ -18,15 +18,17 @@ export const signUpValidation=[
     body("email","Email is required").not().isEmpty(),
     body("email","Invalid email").isEmail(),
     body("password","password is required").not().isEmpty(),
-    body("password","Password  should contain atleast 8 characters,uppercase and lower case letters,numbers and symbols").isStrongPassword()
-];
+    body("password","Password  should contain atleast 8 characters,uppercase and lower case letters,numbers and symbols").isStrongPassword(),
+    body("confirmPassword","confirmPassword is required").not().isEmpty()
+];    
 
 export const signInValidation=[
     
     body("email","Email is required").not().isEmpty(),
     body("email","Invalid email").isEmail(),
     body("password","password is required").not().isEmpty(),
-    body("password","Invalid password").isStrongPassword()
+    body("password","Invalid password").isStrongPassword(),
+
 ];
 
 export const testValidation = [
